--- a/_notebooks/Lesson Homework/Iteration/2024-11-7-Iteration-P3.ipynb
+++ b/_notebooks/Lesson Homework/Iteration/2024-11-7-Iteration-P3.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -135,6 +135,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js \n",
+    "    // Initialize the counter\n",
+    "    let counter = 0;\n",
+    "\n",
+    "    // Loop while counter is less than 5\n",
+    "    while (counter < 5) {\n",
+    "        console.log(\"Counter is: \" + counter); // Print the current counter value\n",
+    "        counter++; // Increment the counter\n",
+    "    }\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "vscode": {
@@ -166,6 +187,33 @@
     "Increment the Outer Loop Variable:\n",
     "\n",
     "Increment outerFactor by 1 to move to the next row in the table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%js\n",
+    "    let outerFactor = 1;\n",
+    "\n",
+    "    while (outerFactor <= 10) {\n",
+    "        let innerFactor = 1;\n",
+    "        \n",
+    "        while (innerFactor <= 10) {\n",
+    "            let product = outerFactor * innerFactor;\n",
+    "            console.log(`${product}\\t`);\n",
+    "            innerFactor++;\n",
+    "        }\n",
+    "        \n",
+    "        console.log();\n",
+    "        outerFactor++;\n",
+    "    }\n"
    ]
   },
   {
