--- a/_notebooks/Lesson Homework/Booleans/10-24BOOLEANSHW.ipynb
+++ b/_notebooks/Lesson Homework/Booleans/10-24BOOLEANSHW.ipynb
@@ -100,25 +100,26 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "javascript"
     }
    },
    "outputs": [],
    "source": [
-    "// Declare variables\n",
-    "const userName = \"Mario\"; \n",
-    "let gpa = 3.5; // Student's GPA\n",
-    "let inExtracurriculars = true; // Participation in extracurricular activities\n",
+    "%%js\n",
+    "    // Declare variables\n",
+    "    const userName = \"Mario\"; \n",
+    "    let gpa = 3.5; // Student's GPA\n",
+    "    let inExtracurriculars = true; // Participation in extracurricular activities\n",
     "\n",
-    "// Determine eligibility using boolean operators\n",
-    "const isEligibleForScholarship = (gpa >= 3.0) && inExtracurriculars;\n",
+    "    // Determine eligibility using boolean operators\n",
+    "    const isEligibleForScholarship = (gpa >= 3.0) && inExtracurriculars;\n",
     "\n",
-    "// Log the result\n",
-    "if (isEligibleForScholarship) {\n",
-    "    console.log(\"Congratulations, \" + userName + \"! You are eligible for the scholarship.\");\n",
-    "} else {\n",
-    "    console.log(\"Keep working hard to meet the eligibility criteria, \" + userName + \".\");\n",
-    "}\n"
+    "    // Log the result\n",
+    "    if (isEligibleForScholarship) {\n",
+    "        console.log(\"Congratulations, \" + userName + \"! You are eligible for the scholarship.\");\n",
+    "    } else {\n",
+    "        console.log(\"Keep working hard to meet the eligibility criteria, \" + userName + \".\");\n",
+    "    }\n"
    ]
   }
  ],
