--- a/_notebooks/Lesson Homework/Booleans/10-24BOOLEANSHW.ipynb
+++ b/_notebooks/Lesson Homework/Booleans/10-24BOOLEANSHW.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "%%js\n",
     "    // Declare variables\n",
-    "    const userName = \"Mario\"; \n",
+    "    const userName = \"Santhosh\"; \n",
     "    let gpa = 3.5; // Student's GPA\n",
     "    let inExtracurriculars = true; // Participation in extracurricular activities\n",
     "\n",
